tests/compile_fail/result_lvalue_ref_from_temporary_fail.cpp
#include <feer/result.hpp>

int main() {
    feer::Result<int&> invalid = 123;
    (void)invalid;
    return 0;
}
